--- a/restaurants/templates/restaurant_create.html
+++ b/restaurants/templates/restaurant_create.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form action= "{% url 'restaurant_create' %}" method="POST">
+<form action= "{% url 'restaurant_create' %}" method="POST" enctype="multipart/form-data">
 	{% csrf_token %}
 	{{restaurant}}
 
