--- a/restaurants/templates/restaurants_detail.html
+++ b/restaurants/templates/restaurants_detail.html
@@ -6,5 +6,10 @@
 <body>
 	{{festaurant.title}} <br>
 	{{festaurant.description}} <br>
+	{% if festaurant.logo %}
+
+		<img class  ="card-img-top" src="{{festaurant.logo.url}}" alt="Article image">
+
+	{% endif %}
 </body>
 </html>
